mesa (18.0.0~rc2-1ubuntu1) UNRELEASED; urgency=medium

  * Merge with Debian experimental.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 26 Jan 2018 17:52:21 +0200

mesa (18.0.0~rc2-1) experimental; urgency=medium

  * New upstream release.
  * libgbm1.symbols: Updated.
  * rules: Use -O1 for sh3 & sh4, thanks John Paul Adrian Glaubitz!
    (Closes: #887444)
  * rules: Fix hurd FTBFS, thanks Samuel Thibault! (Closes: #888047)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Jan 2018 13:42:14 +0200

mesa (17.3.3-1) unstable; urgency=medium

  * New upstream release.
  * Bump debhelper compat to 10.
  * Bump standards version to 4.1.3.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 19 Jan 2018 20:34:29 +0100

mesa (17.3.2-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 12 Jan 2018 15:11:42 +0200

mesa (17.3.1-1) unstable; urgency=medium

  * New upstream release.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 22 Dec 2017 11:25:59 +0100

mesa (17.3.0-1) unstable; urgency=medium

  * New upstream release.
  * Bump standards version to 4.1.2.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Wed, 13 Dec 2017 17:11:15 +0100

mesa (17.3.0~rc5-1) experimental; urgency=medium

  * New upstream release candidate.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 21 Nov 2017 11:44:37 +0100

mesa (17.3.0~rc3-1) experimental; urgency=medium

  [ Andreas Boll ]
  * New upstream release candidate.

  [ Fabio Pedretti ]
  * control: Remove libtxc-dxtn* recommends for S3TC.
  * rules: Rename --enable-gallium-llvm to --enable-llvm.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Wed, 08 Nov 2017 14:00:55 +0100

mesa (17.3.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump libdrm-dev build-dep to 2.4.85 per configure.ac.
  * rules: Replace deprecated --disable-omx with --disable-omx-bellagio.
  * Update libgbm1.symbols.
  * Update extend-diff-ignore.
