@@ -1,0 +1,18 @@
+#!/bin/sh
+
+set -e
+
+case "$1" in
+  configure)
+  # remove alternatives from libegl1-mesa
+  update-alternatives --remove ${DEB_HOST_MULTIARCH}_egl_conf \
+	/usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl/ld.so.conf
+
+  # explicit ldconfig due to alternatives
+  ldconfig
+
+esac
+
+#DEBHELPER#
+
+exit 0
