@@ -1,1 +1,0 @@
-/usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl/libEGL.so /usr/lib/${DEB_HOST_MULTIARCH}/libEGL.so
