@@ -1,20 +1,0 @@
-#!/bin/sh
-
-set -e
-
-THIS_PACKAGE=libegl1-mesa
-THIS_SCRIPT=prerm
-
-case "$1" in
-  remove)
-  # Use alternatives to make it easier to switch between Mesa and 3rd party modules
-  update-alternatives --remove ${DEB_HOST_MULTIARCH}_egl_conf /usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl/ld.so.conf
-
-  # explicit ldconfig due to alternatives
-  ldconfig
-
-esac
-
-#DEBHELPER#
-
-exit 0
