@@ -1,3 +1,0 @@
-usr/lib/${DEB_HOST_MULTIARCH}/libGL.so usr/lib/${DEB_HOST_MULTIARCH}/mesa
-usr/lib/*/libglapi.so
-usr/lib/*/pkgconfig/gl.pc
