@@ -1,1 +1,0 @@
-/usr/lib/${DEB_HOST_MULTIARCH}/mesa/libGL.so /usr/lib/${DEB_HOST_MULTIARCH}/libGL.so
