@@ -1,1 +1,0 @@
-/usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl/libGLESv1_CM.so /usr/lib/${DEB_HOST_MULTIARCH}/libGLESv1_CM.so
