@@ -1,1 +1,0 @@
-usr/lib/${DEB_HOST_MULTIARCH}/libGLESv1_CM.so.1* usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl
