@@ -1,1 +1,0 @@
-usr/lib/${DEB_HOST_MULTIARCH}/libGLESv2.so.2* usr/lib/${DEB_HOST_MULTIARCH}/mesa-egl
